--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,12 @@
   
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Muli', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,6 +14,10 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+.container{
+  display: flex;
 }
 
 .panel-1{
