style.css - adjusted what happens to teh h3 text in an active panel

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,107 +1,107 @@
-  
-@import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap');
 
 
-/* sets global styles */
-* {
-  box-sizing: border-box;
-  
-}
+  /* sets global styles */
+  * {
+    box-sizing: border-box;
 
-/* changes default html font size so that each rem = 10px */
-HTML{
-  font-size: 62.5%;
-} 
-
-/* sets the basic styles for the body */
-body {
-  font-family: 'Muli', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden;
-  margin: 0;
-  
-}
-
-/* this makes all the children of the container go horizontal */
-.container{
-  display: flex;
-  width: 90vw;
-}
-
-/* setting the background images */
-.panel-1{
-  background-image: url(../assets/images/image\ 1\ -\ explore\ the\ world.jpg);
-}
-
-.panel-2{
-  background-image: url(../assets/images/image\ 2\ -\ wild\ forest.jpg);
-}
-
-.panel-3{
-  background-image: url(../assets/images/image\ 3\ -\ sunny\ beach.jpg);
-}
-
-.panel-4{
-  background-image: url(../assets/images/image\ 4\ -\ city\ in\ winter.jpg);
-}
-
-.panel-5{
-  background-image: url(../assets/images/image\ 5\ -\ mountain\ clouds.jpg);
-}
-
-/* this affects all the panels */
-.panel{
-  background-size: auto 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 80vh;
-  border-radius: 6rem;
-  color: #fff;
-  cursor: pointer;
-  flex: 0.5;
-  margin: 1rem;
-  /* position made relative so the h3 children position can be made absolute */
-  position: relative;
-  /* this is to make the transition smoother */
-  transition: flex 0.7s ease-in;
-}
-
-
-/* style the text in the panels */
-.panel h3{
-  font-size: 2.4rem;
-
-  /* position absolute to keep the text fixed in the panels */
-  position: absolute;
-  bottom: 20px;
- left: 30%;
- justify-content: center;
-  margin: 0;
-
-  /* opacity to zero means they are invisible until made active by the javascript */
-  opacity: 0;
-}
-
-/* set what happens when a panel becomes 'active' */
-.panel.active{
-  flex:5;
-}
-
-.panel.active h3{
-  opacity: 1;
-}
-
-
-@media (max-width: 480px){
-  .container{
-    width: 100vw;
   }
 
-  .panel:nth-of-type(4),.panel:nth-of-type(5){
-    display: none;
+  /* changes default html font size so that each rem = 10px */
+  HTML {
+    font-size: 62.5%;
   }
-}
+
+  /* sets the basic styles for the body */
+  body {
+    font-family: 'Muli', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+
+  }
+
+  /* this makes all the children of the container go horizontal */
+  .container {
+    display: flex;
+    width: 90vw;
+  }
+
+  /* setting the background images */
+  .panel-1 {
+    background-image: url(../assets/images/image\ 1\ -\ explore\ the\ world.jpg);
+  }
+
+  .panel-2 {
+    background-image: url(../assets/images/image\ 2\ -\ wild\ forest.jpg);
+  }
+
+  .panel-3 {
+    background-image: url(../assets/images/image\ 3\ -\ sunny\ beach.jpg);
+  }
+
+  .panel-4 {
+    background-image: url(../assets/images/image\ 4\ -\ city\ in\ winter.jpg);
+  }
+
+  .panel-5 {
+    background-image: url(../assets/images/image\ 5\ -\ mountain\ clouds.jpg);
+  }
+
+  /* this affects all the panels */
+  .panel {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 80vh;
+    border-radius: 6rem;
+    color: #fff;
+    cursor: pointer;
+    flex: 0.5;
+    margin: 1rem;
+    /* position made relative so the h3 children position can be made absolute */
+    position: relative;
+    /* this is to make the transition smoother */
+    transition: flex 0.7s ease-in;
+  }
+
+
+  /* style the text in the panels */
+  .panel h3 {
+    font-size: 2.4rem;
+    /* position absolute to keep the text fixed in the panels */
+    position: absolute;
+    bottom: 20px;
+    left: 30%;
+    justify-content: center;
+    margin: 0;
+    /* opacity to zero means they are invisible until made active by the javascript */
+    opacity: 0;
+  }
+
+  /* set what happens when a panel becomes 'active' */
+  .panel.active {
+    flex: 5;
+  }
+
+  /* makes the panel text appear when the panel clicked on */
+  .panel.active h3 {
+    opacity: 1;
+    transition: opacity 0.3s ease-in;
+  }
+
+
+  @media (max-width: 480px) {
+    .container {
+      width: 100vw;
+    }
+
+    .panel:nth-of-type(4),
+    .panel:nth-of-type(5) {
+      display: none;
+    }
+  }
